[gd_scene load_steps=24 format=3 uid="uid://h5kqn3bag3fi"]

[ext_resource type="ArrayMesh" uid="uid://dsr1vmk03uq0y" path="res://assets/objects/Itembox/model_monitor.obj" id="1_tcly0"]
[ext_resource type="Script" uid="uid://bssfhqycklo6t" path="res://objects/Common/Itembox/Itembox_Event.gd" id="1_wa8fq"]
[ext_resource type="AudioStream" uid="uid://dm22fahcu0pd4" path="res://sounds/objects/sfxDestroy.wav" id="2_5npl4"]
[ext_resource type="ArrayMesh" uid="uid://pkvprly3neoo" path="res://assets/objects/Itembox/model_monitor_broken.obj" id="2_lsljx"]
[ext_resource type="AudioStream" uid="uid://bm8st6c8kho8s" path="res://sounds/objects/sfxRing.wav" id="2_vd4o8"]
[ext_resource type="AudioStream" uid="uid://c2ucd6d2f4ljv" path="res://sounds/objects/sfxBarrier.wav" id="4_4gg7v"]
[ext_resource type="AudioStream" uid="uid://cgfbkj60sev5w" path="res://sounds/objects/sfxWaterBarrier.wav" id="5_66ug5"]
[ext_resource type="AudioStream" uid="uid://dlm2ktdy2chwv" path="res://sounds/player/sfxExtraLife.ogg" id="5_h4xdx"]
[ext_resource type="AudioStream" uid="uid://cjr07hx7gki6d" path="res://sounds/objects/sfxThunderBarrier.wav" id="6_4sus4"]
[ext_resource type="AudioStream" uid="uid://cth06ar1v6tjp" path="res://sounds/objects/sfxFireBarrier.wav" id="7_af3bm"]
[ext_resource type="Material" uid="uid://c2cadvcje8s6v" path="res://objects/Common/Itembox/Metal.tres" id="7_jbrgv"]
[ext_resource type="Texture2D" uid="uid://ce4gr1c4juooa" path="res://assets/objects/Itembox/spr_itembox_ring.png" id="7_og8vh"]
[ext_resource type="PackedScene" uid="uid://c3ci02kplkwmh" path="res://effects/Explosion.tscn" id="8_h4xdx"]
[ext_resource type="Material" uid="uid://tq6jfxrsy3o0" path="res://objects/Common/Itembox/redglowy.tres" id="8_kdc1l"]
[ext_resource type="Script" uid="uid://bfu5w2lwkscqc" path="res://objects/Common/Itembox/ItemIcon.gd" id="8_ppmu0"]
[ext_resource type="Script" uid="uid://ctaebdc2nhi06" path="res://effects/Explosion.gd" id="9_sbh6g"]
[ext_resource type="Texture2D" uid="uid://dn5u3ffpyg35g" path="res://assets/objects/Itembox/spr_itembox_barrier.png" id="10_r81xw"]
[ext_resource type="Texture2D" uid="uid://jawigykrh7kq" path="res://assets/objects/Itembox/spr_itembox_invincible.png" id="11_4sp07"]
[ext_resource type="Texture2D" uid="uid://bdy7sbw103r3" path="res://assets/objects/Itembox/spr_itembox_extralife_sonic.png" id="16_66ug5"]
[ext_resource type="Texture2D" uid="uid://cigggml7naeg" path="res://assets/objects/Itembox/spr_itembox_barrier_water.png" id="16_bcehs"]
[ext_resource type="Texture2D" uid="uid://cuy65050yvtpn" path="res://assets/objects/Itembox/spr_itembox_barrier_thunder.png" id="17_4gtcx"]
[ext_resource type="Texture2D" uid="uid://ci32t2v62ki8r" path="res://assets/objects/Itembox/spr_itembox_barrier_fire.png" id="18_f3h4e"]

[sub_resource type="SphereShape3D" id="SphereShape3D_jbrgv"]
radius = 2.64

[node name="Itembox" type="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0763502, -0.0299907, -0.0793273)
script = ExtResource("1_wa8fq")
sfx_ring = ExtResource("2_vd4o8")
sfx_barrier = ExtResource("4_4gg7v")
sfx_water_barrier = ExtResource("5_66ug5")
sfx_thunder_barrier = ExtResource("6_4sus4")
sfx_fire_barrier = ExtResource("7_af3bm")
sfx_extra_life = ExtResource("5_h4xdx")

[node name="BreakSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00462389, 2.38419e-07, -0.00252676)
visible = false
stream = ExtResource("2_5npl4")
max_distance = 500.0
max_polyphony = 5
panning_strength = 0.0
area_mask = 65535
playback_type = 1
attenuation_filter_db = 0.0

[node name="ItemSound" type="AudioStreamPlayer3D" parent="."]
visible = false
max_distance = 1301.06
max_polyphony = 5
panning_strength = 0.0
area_mask = 65535
playback_type = 1
attenuation_filter_db = 0.0

[node name="Explosion" parent="." instance=ExtResource("8_h4xdx")]
visible = false
script = ExtResource("9_sbh6g")

[node name="ModelNormal" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1.3, -0.0012846, -0.984149, 0.312711)
mesh = ExtResource("1_tcly0")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("7_jbrgv")

[node name="ItemIcon" type="Sprite3D" parent="ModelNormal" node_paths=PackedStringArray("itembox")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.44729, 0.607196)
pixel_size = 0.08
double_sided = false
texture_filter = 0
texture = ExtResource("7_og8vh")
script = ExtResource("8_ppmu0")
spr_ring = ExtResource("7_og8vh")
spr_barrier = ExtResource("10_r81xw")
spr_barrier_water = ExtResource("16_bcehs")
spr_barrier_thunder = ExtResource("17_4gtcx")
spr_barrier_fire = ExtResource("18_f3h4e")
spr_extralife = ExtResource("16_66ug5")
spr_invincibility = ExtResource("11_4sp07")
itembox = NodePath("../..")

[node name="ModelBroken" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1.3, -0.0101535, -1.00136, 0.312252)
mesh = ExtResource("2_lsljx")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("7_jbrgv")
surface_material_override/3 = ExtResource("8_kdc1l")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_jbrgv")
debug_color = Color(1, 0, 0, 1)
